# MScFE.Capstone

./: .gitignore  README.md  pyproject.toml
analysis/: corn_analysis.ipynb  dairy_analysis.ipynb  pork_analysis.ipynb  soy_analysis.ipynb
data/analysis/cleaned/: corn_weather_cleaned.parquet  corn_weather_cleaned_metadata.json  dairy_weather_cleaned.parquet  dairy_weather_cleaned_metadata.json  pork_weather_cleaned.parquet  pork_weather_cleaned_metadata.json  soybean_weather_cleaned.parquet  soybean_weather_cleaned_metadata.json
data/analysis/results/: corn_regression_results.csv  corn_validation_results.csv  dairy_regression_results.csv  dairy_validation_results.csv  pork_regression_results.csv  pork_validation_results.csv  soybean_regression_results.csv  soybean_validation_results.csv
data/nasa/: California_nasa_power.csv  Illinois_nasa_power.csv  Iowa_nasa_power.csv  Minnesota_nasa_power.csv  Nebraska_nasa_power.csv  New_York_nasa_power.csv  North_Carolina_nasa_power.csv  Wisconsin_nasa_power.csv
data/noaa/: California.csv  Illinois.csv  Iowa.csv  Minnesota.csv  Nebraska.csv  New_York.csv  North_Carolina.csv  Wisconsin.csv
data/noaa/station_metadata/: California_station_map.csv  California_stations.csv  Illinois_station_map.csv  Illinois_stations.csv  Iowa_station_map.csv  (+11 more)
data/price/: price_CB=F.csv  price_DC=F.csv  price_HE=F.csv  price_LE=F.csv  price_ZC=F.csv  price_ZL=F.csv  price_ZM=F.csv  price_ZO=F.csv  price_ZS=F.csv  price_ZW=F.csv
lib/: tickers.json
src/: analysis.py  data_prep.py  data_viz.py  nasa.py  noaa.py  price.py  utils.py
