[tool.poetry]
name = "MScFE Capstone Project"
version = "0.1.0"
description = ""
authors = ["Ivan Andriushin <i.andryushin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
plotly = "^5.24.1"
yfinance = "^0.2.55"
requests = "^2.32.3"
pathlib = "^1.0.1"
matplotlib = "^3.10.1"
statsmodels = "^0.14.4"
pyarrow = "^20.0.0"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
notebook = "<7"
ipywidgets = "^8.1.3"
python-lsp-server = "^1.11.0"
jupyterlab = "^4.2.2"
jupyterlab-lsp = "^5.1.0"
jupyterlab-execute-time = "^3.1.2"
jupyter-contrib-nbextensions = "^0.7.0"
traitlets = "5.9.0"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
jupysql = "^0.11.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
